--- a/style.css
+++ b/style.css
@@ -1,17 +1,159 @@
+:root {
+    --color-blue: #277DD8;
+    --color-magenta: #D827D5;
+    --color-orange: #D88227;
+    --color-green: #27D82A;
+
+    --color-dark-blue: #15406e;
+}
+
+:focus {
+
+}
+
+/* styling */
+
+body { 
+    font-family: Arial, Helvetica, sans-serif;
+    transition: all 500ms ease-in;
+}
+
+h1 {
+    font-size: 50px;
+    font-weight: 1000;
+    letter-spacing: 2px;
+    color: var(--color-blue);
+}
+
+.name-header {
+    font-size: 30px;
+}
+
+.player-header {
+    font-size: 40px;
+    padding: 0 10px;
+}
+
+label[for="X"] {
+    color: var(--color-green);
+}
+
+label[for="O"] {
+    color: var(--color-magenta);
+}
+
+.fade-in {
+    -webkit-animation: fadeIn 1s;
+    animation: fadeIn 1s;
+}
+
+.fade-out {
+    -webkit-animation: fadeOut 1s;
+    animation: fadeOut 1s;
+
+    animation-play-state: paused;
+    animation-fill-mode: forwards;
+}
+
+.player-input {
+    height: 30px;
+    border: 2px solid var(--color-dark-blue);
+    border-radius: 20px;
+    padding: 0 10px;
+    font-size: 20px;
+}
+
+input:focus,
+button:focus {
+    outline: none;
+    box-shadow: 0px 0px 3px 1px var(--color-dark-blue);
+}
+
+button {
+    background-color: var(--color-blue);
+    border: 2px solid var(--color-dark-blue);
+    border-radius: 5px;
+    height: 30px;
+    width: 100px;
+    font-size: 20px;
+    color: white;
+    box-shadow: 1px 1px 3px 1px var(--color-dark-blue);
+    transition: all 0.30s ease-in-out;
+}
+
+button:hover{
+    background-color: var(--color-dark-blue)
+}
+
+button:active {
+    transform: scale(.95);
+}
+
+.play-again {
+    width: 120px;
+}
+
+.board-space {
+    font-size: 160px;
+ 
+}
+
+.game-marker {
+    font-size: 160px;
+    font-family:Arial, Helvetica, sans-serif;
+}
+
+/* layout */
+
 body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 32px 0 16px;
+    width: 622px;
+}
+
+.header-header {
+    margin: 0 0 .5em 0;
+}
+
+.player-selection {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    height: 120px;
+}
+
+.player-group {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.player-group,
+.player-name {
+    width: 311px;
+}
+
+.player-name {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 #board { /* need to account for padding and borders */
-    margin-top: 160px;
     height: 620px;
     width: 622px;
-
     padding: 10px;
-
-    display: flex;
+    display: none;
     flex-wrap: wrap;
 }
 
@@ -20,13 +162,9 @@ body {
     width: 200px;
     padding: 10px;
     border-collapse: collapse;
-
     display: flex;
     justify-content: center;
     align-items: center;
-
-    font-size: 160px;
-    font-family:Arial, Helvetica, sans-serif;
     cursor: pointer;
 }
 
@@ -47,8 +185,43 @@ body {
 }
 
 .game-marker {
-    font-size: 160px;
-    font-family:Arial, Helvetica, sans-serif;
     padding: 30px;
     cursor: pointer;
+}
+
+/* animations */
+
+.blur {
+    filter: blur(2px);
+}
+
+@-webkit-keyframes fadeIn {
+    from { opacity: 0; }
+      to { opacity: 1; }
+}
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeOut {
+    from {
+      opacity: 1;
+    }
+    to {
+      opacity: 0;
+    }
+}
+
+@-webkit-keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
 }
