--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ button {
     border: 2px solid var(--color-dark-blue);
     border-radius: 5px;
     height: 30px;
-    width: 100px;
+    width: 110px;
     font-size: 20px;
     color: white;
     box-shadow: 1px 1px 3px 1px var(--color-dark-blue);
@@ -143,7 +143,7 @@ header {
     display: flex;
     justify-content: space-around;
     width: 100%;
-    height: 120px;
+    height: 133px;
 }
 
 .player-group {
@@ -151,6 +151,29 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+}
+
+.opponent-selection {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+
+    
+    width: 311px;
+    height: 133px;
+}
+
+.opponent-o {
+    color: var(--color-magenta);
+}
+
+.opponent-header {
+    margin-bottom: 20px;
+}
+
+.second-group {
+    display: none
 }
 
 .player-group,
